--- a/templates/base.html
+++ b/templates/base.html
@@ -92,9 +92,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">{% blocktrans %}Aloqa{% endblocktrans %}</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>{% blocktrans %}Salarbuyi ko'chasi - 35, Toshkent, O'zbekiston{% endblocktrans %}</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+998 90 123 45 67</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>{% blocktrans %}Tashkent Index D2 block{% endblocktrans %}</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+998 78 1139697</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>ppromoy@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href="https://t.me/promoyuz" target="_blank"><i class="fab fa-telegram"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
