--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -24,7 +24,7 @@
                         </div>
                         <div class="ms-3">
                             <h5 class="text-primary">{% blocktrans %}Office{% endblocktrans %}</h5>
-                            <p class="mb-0">{% blocktrans %}Salarbo'yi ko'chasi, 35, Toshkent{% endblocktrans %}</p>
+                            <p class="mb-0">{% blocktrans %}Tashkent Index D2 block{% endblocktrans %}</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center mb-3">
@@ -33,7 +33,7 @@
                         </div>
                         <div class="ms-3">
                             <h5 class="text-primary">{% blocktrans %}Mobile{% endblocktrans %}</h5>
-                            <p class="mb-0">+998901234567</p>
+                            <p class="mb-0">+998 78 113 9697</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
@@ -42,7 +42,7 @@
                         </div>
                         <div class="ms-3">
                             <h5 class="text-primary">{% blocktrans %}Email{% endblocktrans %}</h5>
-                            <p class="mb-0">info@example.com</p>
+                            <p class="mb-0">promoy@gmail.com</p>
                         </div>
                     </div>
                 </div>
