--- a/templates/base.html
+++ b/templates/base.html
@@ -60,15 +60,6 @@
                         <option value="ru" {% if request.LANGUAGE_CODE == 'ru' %}selected{% endif %} style="border: none;">РУССКИЙ</option>
                     </select>
                 </form>
-
-                 <!--                <div class="nav-item dropdown">-->
-<!--                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>-->
-<!--                    <div class="dropdown-menu fade-down m-0">-->
-<!--                        <a href="team.html" class="dropdown-item">Our Team</a>-->
-<!--                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>-->
-<!--                        <a href="404.html" class="dropdown-item">404 Page</a>-->
-<!--                    </div>-->
-<!--                </div>-->
             </div>
         </div>
     </nav>
@@ -94,7 +85,7 @@
                     <h4 class="text-white mb-3">{% blocktrans %}Aloqa{% endblocktrans %}</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>{% blocktrans %}Tashkent Index D2 block{% endblocktrans %}</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+998 78 1139697</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>ppromoy@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>promoy@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href="https://t.me/promoyuz" target="_blank"><i class="fab fa-telegram"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
