--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <div class="owl-carousel header-carousel position-relative">
             {% for product in service %}
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" style="width: 100%; height: 700px" src="{{ product.photo.url }}" alt="">
+                <img class="img-fluid" style="width: 100%; height: 700px" src="{{ product.photo.url }}" alt="{{ product.photo.url }}">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -86,7 +86,7 @@
                         <div class="text-center p-4 pb-0">
                             <h3 class="mb-0">${{ product.currency }}</h3>
                             <div class="mb-3">
-                                {{ product.description | truncatewords:100}}
+                                {{ product.description | truncatewords:100 | safe}}
                             </div>
                             <h5 class="mb-4">{{ product.title }}</h5>
                         </div>
