--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="https://promoy.uz/static/img/logo.png" rel="icon">
-
+    <link rel="icon" href="{% static 'img/logo1.jpg' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'img/logo1.jpg' %}" type="image/x-icon">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
