--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">{% blocktrans %}Funksiyalar{% endblocktrans %}</h6>
-                    <h1 class="mb-4">{% blocktrans %}Mahsulotlarimiz xususiyatlri !{% endblocktrans %}</h1>
+                    <h1 class="mb-4">{% blocktrans %}Mahsulotlarimiz xususiyatlari !{% endblocktrans %}</h1>
                     <div class="row gy-2 gx-4 mb-4">
                         {% for function in functions %}
                         <div class="col-sm-6">
